--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "face-api.js": "^0.22.2",
-    "vue": "^3.3.4"
+    "pinia": "^2.2.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
